--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -45,18 +45,10 @@ RUN adduser --system --uid 1001 nextjs
 USER nextjs
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-#COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/standalone ./apps/web/.next/standalone
-#COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
-#COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/static ./apps/web/.next/static
-#COPY --from=installer --chown=nextjs:nodejs /app/apps/web/public ./apps/web/public
-#COPY --from=builder /app/node_modules ./node_modules
-#WORKDIR apps/web/
-#CMD node server.js
-
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/standalone ./apps/web/.next/standalone
 COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
 COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/static ./apps/web/.next/static
 COPY --from=installer --chown=nextjs:nodejs /app/apps/web/public ./apps/web/public
+COPY --from=builder /app/node_modules ./node_modules
 
 CMD node apps/web/server.js
